--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -14,7 +14,7 @@
 /* Your app custom styles here */
 :root {
   --zmp-primary-color: #0068ff;
-  --zmp-secondary-color: #ff8a00;
+  --zmp-secondary-color: #006af5;
   --zmp-page-bg-color: #f4f5f6;
 }
 body {
